# Autonomous-_content-_creation_-TFP-Enterprises

./: README.md  automated_content_system.py  aws_architecture.md  complete_example.py  containerized architecture_TFP Enterprises.md  content_system.py  copilot_generated_system.md  cultural_terms.txt  main_execution_system.py  multiplatform_content_business_plan.md  n8n_workflow.txt  process_guardian.py  pyproject.toml  pytest.ini  upload_system.py  workflow_analysis.md  zero_touch_deployment.md
.github/workflows/: blank.yml
WORKIY/: AI_Youtube_BusinessPlan_Hierarchical.md  Video Assembly.txt  ai_agent_instructions.md  enhanced_content_system.py  main_execution_system.py  omnichannel_dashboard.tsx  omnichannel_implementation.py
auto system files/: advanced_monetization_strategies.md  advanced_optimization.py  business_implementation_guide.md  growth_acquisition_strategies.md  monitoring_analytics.py  performance_analytics_dashboard (1).py
autocontent-pro/: package.json
autocontent-pro/infra/: dashboard.json
automated_content_testing_system/: README_TESTING.md  requirements-dev.txt
black_history_content_system/: main_historical_content_system.py
docs/: CLAUDE.md  SOP_Sections_3.4_to_3.6.md  Video Assembly.txt  ai_integration_future_proofing.md  exit_strategies_valuation.md  integration_guide.md  legal_risk_management.md  omnichannel_framework.md  setup_guide.md  technical_specifications.md
scripts/: complete_example.py  main_execution_system.py  workiy_main_execution.py
tests/: Makefile  conftest.py  pyproject.toml  requirements-dev.txt
(+60 files in other folders)
